--- a/KrKrSceneManager/KrKrSceneManager.csproj
+++ b/KrKrSceneManager/KrKrSceneManager.csproj
@@ -51,11 +51,12 @@
     <Compile Include="Zlib\SupportClass.cs" />
     <Compile Include="Zlib\Tree.cs" />
     <Compile Include="Zlib\ZInputStream.cs" />
-    <Compile Include="Zlib\Zlib.cs" />
+    <Compile Include="Zlib\zlib.cs" />
     <Compile Include="Zlib\ZOutputStream.cs" />
     <Compile Include="Zlib\ZStream.cs" />
     <Compile Include="Zlib\ZStreamException.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
