--- a/KrKrSceneManager/KrKrSceneManager.csproj
+++ b/KrKrSceneManager/KrKrSceneManager.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
+    <Compile Include="PackImgFormat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Zlib\Adler32.cs" />
     <Compile Include="Zlib\Deflate.cs" />
