Nothing Changes really...
Updated the TJS2Manager and PSBStrMan to my "default"
Class Class = new Class(script);
Class.Export(Class.Import());
-Try Recovery useless, removed.
If you have a corrupted fan tl script and want recovery, dump the
strings and import to the original script.

--- a/KrKrSceneManager/KrKrSceneManager.csproj
+++ b/KrKrSceneManager/KrKrSceneManager.csproj
@@ -43,6 +43,7 @@
     <Compile Include="PSBResourceManager.cs" />
     <Compile Include="PSBStringManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StructStream.cs" />
     <Compile Include="TJS2Manager.cs" />
     <Compile Include="Zlib\Adler32.cs" />
     <Compile Include="Zlib\Deflate.cs" />
