Helper samples with string sort
It's just a sample, don't need create a issue because a bad result.

--- a/KrKrSceneManager/KrKrSceneManager.csproj
+++ b/KrKrSceneManager/KrKrSceneManager.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms.cs" />
+    <Compile Include="PSBAnalyzer.cs" />
     <Compile Include="PSBResourceManager.cs" />
     <Compile Include="PSBStringManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
