Add app settings xml

--- a/ScnEditorGUI/app.config
+++ b/ScnEditorGUI/app.config
@@ -1,3 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+  </startup>
+  <appSettings>
+    <add key="maximized" value="true"/>
+    <add key="font_size" value="16"/>
+    <!-- Experimental features -->
+    <add key="dark_mode" value="false"/>
+    <add key="textbox_select_all_when_click" value="false"/>
+    <add key="textbox_edit_item_when_ctrl_v" value="false"/>
+  </appSettings>
+</configuration>
